--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#e0e0e0">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="favicon-96x96.png">
+　　<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.5.0/lz-string.min.js"></script>
     <style>
         /* --- 基本スタイル --- */
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; padding: 8px; background-color: #FFF8E1; margin: 0; box-sizing: border-box; font-size: 16px; color: #000; }
@@ -793,3 +794,4 @@
     </script>
 </body>
 </html>
+
